[gd_scene load_steps=7 format=3 uid="uid://d2docaei0vhfr"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_ukvjj"]
[ext_resource type="PackedScene" uid="uid://blcdi8y5tplqc" path="res://Prefabs/UI/DialogueBox.tscn" id="2_fb0ex"]
[ext_resource type="PackedScene" uid="uid://cpsqvdopnkhmy" path="res://Prefabs/CrystalCollect.tscn" id="3_d2oqe"]
[ext_resource type="Texture2D" uid="uid://dun23vxn2v24p" path="res://Art/UI/FuelBar.png" id="4_w1uil"]
[ext_resource type="Texture2D" uid="uid://dy0ohkdf3i38c" path="res://Art/UI/FuelBarFill.png" id="6_fbtm0"]
[ext_resource type="PackedScene" uid="uid://d4fnmf8weosll" path="res://Prefabs/UI/PauseMenu.tscn" id="6_gf274"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ukvjj")

[node name="DialogueBox" parent="." instance=ExtResource("2_fb0ex")]
visible = false

[node name="CrystalCollect" parent="." instance=ExtResource("3_d2oqe")]
offset_top = -77.0
offset_right = 188.0

[node name="FuelMeter" type="TextureRect" parent="."]
offset_left = 18.0
offset_top = 14.0
offset_right = 390.0
offset_bottom = 72.0
texture = ExtResource("4_w1uil")
expand_mode = 1

[node name="FuelProgress" type="TextureProgressBar" parent="FuelMeter"]
layout_mode = 0
offset_left = 27.0
offset_top = 23.0
offset_right = 359.0
offset_bottom = 45.0
value = 100.0
nine_patch_stretch = true
texture_progress = ExtResource("6_fbtm0")

[node name="Facade" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="PauseMenu" parent="." instance=ExtResource("6_gf274")]
visible = false

[connection signal="pressed" from="PauseMenu/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]

[editable path="PauseMenu"]
